--- a/Ron_Holt_ML_Project_Idea.ipynb
+++ b/Ron_Holt_ML_Project_Idea.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Ron Holt ML Project Idea.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMjknM0/+KwYuJXGn+JzF/+",
+      "authorship_tag": "ABX9TyOMSbJz9TKPkyyuOmfOWmCe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,11 +39,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Background: Predicting cell lineage patterns in RNAseq measurments.\n",
+        "**Background**: Predicting cell lineage patterns in RNAseq measurments.\n",
         "\n",
-        "Project Description: Using representation learning as low dimentional input to higher dimentional clustering tools like TSNE or UMAP. \n",
+        "**Project Description**: Using representation learning as low dimentional input to higher dimentional reduction clustering tools like TSNE or UMAP to learn cell lineage. Also evaluate against traditional methods like PCA or Logistic PCA.\n",
         "\n",
-        "Performance Metric: L2-norm/MSE"
+        "**Performance Metric**: Min{L2-norm/MSE}"
       ],
       "metadata": {
         "id": "6nNhFA2eIhW6"
