--- a/readme
+++ b/readme
@@ -3,3 +3,7 @@ readme proj file
 # Description of Metrics:
 
 1. Mean Squared Error: This measures the average sqaured distance, or errors, in the estimated value predictions and the ground truth values. In our problem, we generte a reconstructed version of our input to the network.  We aim to minimze this distnce, or reconstruction error, to check the ability of our network to learn the parameters of our data. 
+
+
+R.S. - What would your confusion matrix look like? For example what would the true positive, false positive, false negative, and true negative look like?
+R.S. - Don't forget to add ".md" for the readme file.
